[package]
name = "cert-issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["test-util"]}
x509-parser.workspace = true
base64.workspace = true
rsa.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
time.workspace = true
tracing.workspace = true
async-trait.workspace = true

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
rcgen = { version = "0.14.7", features = ["x509-parser"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
dashmap = "6"
cert-issuer-common = { path = "../common" }
polar = { path = "../../lib" }

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
chrono.workspace = true
