[package]
name = "cert-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
time.workspace = true
wiremock.workspace = true
tempfile.workspace = true
x509-parser.workspace = true
rcgen.workspace = true
serde_json.workspace = true
base64.workspace = true
rsa.workspace = true
jsonwebtoken.workspace = true
clap.workspace = true

cert-issuer-common = { path = "../common" }


[[bin]]
name = "cert-client"
path = "src/main.rs"

[[bin]]
name = "cert-issuer-setup"
path = "src/dev-setup/main.rs"
