[package]
name = "cert-issuer-init"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
time.workspace = true
wiremock.workspace = true
tempfile.workspace = true
x509-parser.workspace = true
cert-issuer-common = { path = "../common" }
