[package]
name = "git-repo-observer"
version.workspace = true
edition.workspace = true

[dependencies]
# --- Workspace & third-party ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
ractor = { version = "0.15.10", features = ["async-trait"] }
rkyv = { workspace = true }
git2 = "=0.20.2"
git-agent-common = { path = "../common" }
# --- Cassini ecosystem ---
cassini-client = { path = "../../cassini/client" }
cassini-types = { path = "../../cassini/types" }
polar          = { path = "../../lib" }
serde = "1"
serde_json = "1.0.149"
url = "2.5.8"
[dev-dependencies]
tempfile = "3.26.0"
