[package]
name = "git-repo-observer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
git2.workspace = true
git-agent-common.workspace = true
polar.workspace = true
ractor.workspace = true
rkyv.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
