[package]
name = "git-repo-processor"
version.workspace = true
edition.workspace = true

[dependencies]
# --- Workspace & third-party ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
ractor = { version = "0.15.8", features = ["async-trait"] }
rkyv = { workspace = true }
git-agent-common = { path = "../common" }
# --- Cassini ecosystem ---
cassini-client = { path = "../../cassini/client" }
cassini-types = { path = "../../cassini/types" }
polar          = { path = "../../lib" }

chrono = {version = "0.4", default-features = false, features = ["clock", "std"] }
neo4rs = { workspace = true }
