[package]
name = "git-repo-processor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
chrono.workspace = true
git-agent-common.workspace = true
neo4rs.workspace = true
polar.workspace = true
ractor.workspace = true
rkyv.workspace = true
tokio.workspace = true
tracing.workspace = true
