[package]
name = "scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
# --- Workspace & third-party ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
ractor = { version = "0.15.10", features = ["async-trait"] }
rkyv = { workspace = true }
git-agent-common = { path = "../common" }
# --- Cassini ecosystem ---
cassini-client = { path = "../../cassini/client" }
cassini-types = { path = "../../cassini/types" }
polar          = { path = "../../lib" }
