[package]
name = "scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
# --- Workspace & third-party ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
ractor = { version = "0.15.10", features = ["async-trait"] }
rkyv = { workspace = true }
git-agent-common = { path = "../common" }
neo4rs = { workspace = true }
# --- Cassini ecosystem ---
cassini-client = { path = "../../cassini/client" }
cassini-types = { path = "../../cassini/types" }
polar          = { path = "../../lib" }

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["neo4j"]}
