[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
git-agent-common.workspace = true
neo4rs = { workspace = true }
polar.workspace = true
ractor.workspace = true
rkyv = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["neo4j"] }
